registration&login completed

--- a/styles.css
+++ b/styles.css
@@ -148,5 +148,5 @@ th, td {
   transform: translate(-50%, -50%);
 }
 
-/*styles for the main page*/
-
+/*styles for the registration page*/
+/* Define your styling here */
